objects/vlocity_cmt__PriceListEntry__c.object
<CustomObject>
    <description>An entry in a price list is a specific price, cost, fee, discount or adjustment defined within a price list. A given price list entry may be defined for an offer, a promotion, or some other context. The price list entry defines the terms and conditions of the pricing including the duration of the pricing as well as policies governing the pricing.</description>
    <fields>
        <fullName>Price_Amount__c</fullName>
        <formula>vlocity_cmt__PricingElementId__r.vlocity_cmt__Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Variable_Code__c</fullName>
        <formula>vlocity_cmt__PricingElementId__r.vlocity_cmt__PricingVariableId__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Variable Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BasePriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Price List Entries (Base Price List)</relationshipLabel>
        <relationshipName>BasePriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplayText__c</fullName>
        <label>Display Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Price List Entry. Used to identify the Price List Entry across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique Price List Entry identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsBasePrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Base Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsVirtualPrice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Virtual Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offer</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PriceListId__c</fullName>
        <label>Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementGlobalKey__c</fullName>
        <description>The global key identifier of the selected pricing element. This global key reference is used to point to the currently active pricing element version among all the versions of this pricing element.</description>
        <externalId>true</externalId>
        <label>Pricing Element Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the pricing element version that was currently active at the time it was selected.</description>
        <label>Pricing Element</label>
        <referenceTo>vlocity_cmt__PricingElement__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingMatrixBindingData__c</fullName>
        <label>Pricing Matrix Binding</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price List Entries (Product)</relationshipLabel>
        <relationshipName>ProductPriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>vlocity_cmt__Promotion__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PromotionItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Item</label>
        <referenceTo>vlocity_cmt__PromotionItem__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RulesDescription__c</fullName>
        <label>Description of Rules</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePlanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Plan</label>
        <referenceTo>vlocity_cmt__TimePlan__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TimePolicyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Policy</label>
        <referenceTo>vlocity_cmt__TimePolicy__c</referenceTo>
        <relationshipLabel>Price List Entries</relationshipLabel>
        <relationshipName>PriceListEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price List Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__PriceListId__c</columns>
        <columns>vlocity_cmt__PricingElementId__c</columns>
        <columns>vlocity_cmt__DisplayText__c</columns>
        <columns>vlocity_cmt__ProductId__c</columns>
        <columns>vlocity_cmt__PricingElementGlobalKey__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__DisplayText__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>vlocity_cmt__PriceListId__c</field>
            <operation>equals</operation>
            <value>Telecom Price List</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price List Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>